@@ -146,3 +146,4 @@ ATTR_tokens,
 ATTR_extraresc,
 ATTR_schedversion,
 ATTR_acctkeepdays,
+ATTR_lockfile,
