@@ -134,7 +134,8 @@ extern char     *msg_svdbnosv;
 
 int svr_recov(
 
-  char *svrfile)  /* I */
+  char *svrfile,  /* I */
+  int read_only)  /* I */
 
   {
   static char *id = "svr_recov";
@@ -191,7 +192,8 @@ int svr_recov(
         svr_attr_def,
         server.sv_attr,
         (int)SRV_ATR_LAST,
-        0) != 0)
+        0,
+        !read_only) != 0 ) 
     {
     log_err(errno, id, "error on recovering server attr");
 
@@ -201,12 +203,15 @@ int svr_recov(
     }
 
   /* Restore the current job number and make it visible in qmgr print server commnad. */
-  server.sv_qs.sv_jobidnumber = i;
+  
+  if (!read_only)
+    {
+    server.sv_qs.sv_jobidnumber = i;
 
-  server.sv_attr[(int)SRV_ATR_NextJobNumber].at_val.at_long = i;
+    server.sv_attr[(int)SRV_ATR_NextJobNumber].at_val.at_long = i;
 
-  server.sv_attr[(int)SRV_ATR_NextJobNumber].at_flags |= ATR_VFLAG_SET | ATR_VFLAG_MODIFY;
-
+    server.sv_attr[(int)SRV_ATR_NextJobNumber].at_flags |= ATR_VFLAG_SET| ATR_VFLAG_MODIFY;
+    }
 
   close(sdb);
 
@@ -222,7 +227,7 @@ int svr_recov(
         PBS_SVRACL,
         svr_attr_def[i].at_name);
 
-      if (svr_attr_def[i].at_action != (int (*)())0)
+      if ((!read_only) && (svr_attr_def[i].at_action != (int (*)())0))
         {
         svr_attr_def[i].at_action(
           &server.sv_attr[i],
